--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
     "rimraf": "^3.0.0"
+  },
+  "dependencies": {
+    "ts-loader": "^8.0.2",
+    "typescript": "^4.0.2"
   }
 }
